--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,6 +1,6 @@
 <h1>Make your Pirate here</h1>
 
-<form method="post" action="/new">
+<form method="post" action="/pirates">
   <label for="name"> Pirate Name:</label>
   <input type="text" id="pirate_name" name="pirate[name]">
   <label for="breed"> Pirate Height:</label>
